adds NDA complience and adds RU version navigation to EN

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h5><strong>EXPERIENCE</strong></h5>
             <div class="row">
                 <div class="col-lg-12">
-                    <h6><a href="https://www.mekanys.com/">Mekanys</a> August 2019 - Until now</h6>
+                    <h6><a href="https://www.mekanys.com/">Mekanys</a> July 2021 - Until now</h6>
                     <p class="justified">Location: Moldova, Chisinau
                         <br>
                         Position - Salesforce Technical Lead
@@ -184,13 +184,13 @@
 
                     <div class="row">
                         <div class="col">
-                            <h6> <a href="https://integrate2cloudapps.com/">Integrate2Cloud </a>May 2022 - Until Now
+                            <h6> <a>Canadian Division </a>May 2022 - Until Now
                             </h6>
                             <p class="justified">
                                 Position - Salesforce Technical Lead
                                 <br>
                                 Description:
-                                As a Contractor Senior Salesforce Developer at Integrate2Cloud,
+                                As a Contractor Senior Salesforce Developer at Canadian Division,
                                 I had the privilege of spearheading numerous projects as a Salesforce Technical Leader.
                                 Working collaboratively with a multi-nationality team, I successfully achieved
                                 client success through expertly crafted Salesforce implementations and integrations.
@@ -209,7 +209,7 @@
                             <h6><strong>Clients worked with:</strong></h6>
                             <div class="row">
                                 <div class="col-6">
-                                    <a href="https://www.sheridancollege.ca/">SHERIDAN COLLEGE</a> 2021 - Until Now
+                                    <a>Canadian College in Ontario</a> 2021 - Until Now
                                     <br>
                                     <i>Canadian College</i>
                                     <br>
@@ -226,9 +226,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://www.skylinegroupofcompanies.ca/">SKYLINE GROUP OF COMPANIES</a>
-                                    2021 -
-                                    Until Now
+                                    <a>Canadian Investment Group of Companies</a>
+                                    2021 - 2023
                                     <br>
                                     <i>Investment Management Organizations</i>
                                     <br>
@@ -246,7 +245,7 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <a href="https://www.netsweeper.com/">NETSWEEPER</a> 2023
+                                    <a>AI-driven Web and Content Filtering Technologies Company</a> 2023
                                     <br>
                                     <i>AI-driven content web filtering and threat management solutions</i>
                                     <br>
@@ -256,7 +255,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://www.rbrosolutions.com/">RBRO</a> 2023
+                                    <a>iManage end-to-end Solutions Provider</a> 2023
                                     <br>
                                     <i>A premiere iManage partner </i>
                                     <br>
@@ -269,7 +268,7 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <a href="https://agmrenovations.com/">AGM RENOVATIONS</a> 2021 - 2023
+                                    <a>Canadian Real Estate Renovation Company</a> 2021 - 2023
                                     <br>
                                     <i>Canadian Service Provider</i>
                                     <br>
@@ -285,7 +284,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://www.littlekickers.co.uk/">LITTLE KICKERS</a> 2022 - 2022
+                                    <a>UK Sports for young Company</a> 2022 - 2022
                                     <br>
                                     <i>Sports company</i>
                                     <br>
@@ -301,14 +300,15 @@
 
                     <div class="row">
                         <div class="col">
-                            <h6> <a href="https://www.merkle.com/dach/en">Merkle DACH </a>August 2021 - June 2022</h6>
+                            <h6> <a>European Division </a>August 2021 - June 2022</h6>
                             <p class="justified">
                                 Position - Salesforce Senior Developer
                                 <br>
                                 Description:
-                                As a Contractor Senior Salesforce Developer at Merkle,
-                                I had the opportunity to contribute my expertise to esteemed clients, Livit and
-                                BioNTech.
+                                As a Contractor Senior Salesforce Developer at European Division,
+                                I had the opportunity to contribute my expertise to esteemed clients:
+                                Swiss Real Estate Management Company and
+                                German Biotechnology Company.
                                 Collaborating closely with cross-functional teams,
                                 I ensured seamless integration and efficient functionality of the Salesforce platform.
                                 I consistently demonstrated adaptability and problem-solving skills to
@@ -318,7 +318,7 @@
                             <h6><strong>Clients worked with:</strong></h6>
                             <div class="row">
                                 <div class="col-6">
-                                    <a href="https://www.biontech.com/">BIONTECH SE</a> 2021 - 2022
+                                    <a>German Biotechnology Company</a> 2021 - 2022
                                     <br>
                                     <i>Biotechnology company</i>
                                     <br>
@@ -330,7 +330,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://www.livit.ch/en">Livit</a> 2021 - 2022
+                                    <a>Swiss Real Estate Management Company</a> 2021 - 2022
                                     <br>
                                     <i>Real Estate company</i>
                                     <br>
@@ -350,8 +350,8 @@
 
             <hr>
 
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row" id="electroglob">
+                <div class="col">
                     <h6><a href="https://electroglob.org/">Electroglob</a> May 2021 - June 2021</h6>
                     <p class="justified">Location: Moldova, Chisinau
                         <br>
@@ -366,22 +366,50 @@
                         interfaces and implementing project requirements.
                     </p>
                 </div>
-                <div class="col-lg-6">
-                    <h6><a href="https://smartsoftdev.eu/">SmartSoftDev</a> July 2020 - December 2020</h6>
-                    <p class="justified">Location: Moldova, Chisinau
-                        <br>
+            </div>
+
+            <hr>
+
+            <div class="row" id="smartsoftdev">
+                <div class="col">
+                    <h6> <a href="https://smartsoftdev.eu/">Smart Soft Dev </a>July 2020 - December 2020</h6>
+                    <p class="justified">
                         Position - Software developer
                         <br>
-                        Description: Experienced in both C++ and Python, I contributed significantly
+                        Description:
+                        Experienced in both C++ and Python, I contributed significantly
                         as a Software Developer at SmartSoftDev. Initially, I successfully
                         translated a Python application into C++ during my three-month
                         project as a C++ software developer. Subsequently, for an additional
                         three months, I excelled as a Python developer,
                         predominantly focused on network programming tasks.
-                        Notably, I actively participated in a project for <a
-                            href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>,
-                        collaborating with cross-functional teams to deliver high-quality solutions.
                     </p>
+                    <h6><strong>Projects worked on:</strong></h6>
+                    <div class="row">
+                        <div class="col-6">
+                            <a href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>
+                            2020
+                            <br>
+                            <i>Healthcare company</i>
+                            <br>
+                            <ul>
+                                <li>Translated C++ functionality into Python application
+                                </li>
+                                <li>Worked on interactive documentation using Jupiter Notebook
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <a>Microcontroller SSH stick</a> 2020
+                            <br>
+                            <i>Internal Project</i>
+                            <br>
+                            <ul>
+                                <li>Developed and maintained C++ implementation</li>
+                                <li>Developed and maintained Python back-end implementation</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -486,4 +514,5 @@
         </div>
     </div>
 </body>
+
 </html>
