--- a/ru/index.html
+++ b/ru/index.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <script src="./script.js"></script>
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
