adds Blenders Manufacturer and Distributor Canadian Experience

--- a/index.html
+++ b/index.html
@@ -208,6 +208,23 @@
                             </p>
                             <h6><strong>Clients worked with:</strong></h6>
                             <div class="row">
+                                <div class="col">
+                                    <a>Canadian Leading Personal Blender Manufacturer</a> 2023 - Until Now
+                                    <br>
+                                    <i>Blenders Manufacturer and Distributor</i>
+                                    <br>
+                                    <ul>
+                                        <li>Tech and Delivery Lead for custom Salesforce applications</li>
+                                        <li>Designed integration architecture with Klaviyo, Woocomerce and Netsuite</li>
+                                        <li>Consulted the client</li>
+                                        <li>Consulted, managed and navigated the development team</li>
+                                        <li>Developed and maintained Back-End functionality</li>
+                                        <li>Developed and maintained REST API integrations</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="row">
                                 <div class="col-6">
                                     <a>Canadian College in Ontario</a> 2021 - Until Now
                                     <br>
