updated info with new experience

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             Chisinau&nbsp;MD-2020 |
             <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> |
             <a class="link" href="mailto:dmitrii.dronov2001@gmail.com">dmitrii.dronov2001@gmail.com</a> |
-            GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
+            GitHub:&nbsp;<a class="link" href="https://github.com/DmitriiDronov">DmitriiDronov</a> |
             LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
-            CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
             Trailhead: <a class="link" href="https://trailblazer.me/id/ddronov">ddronov</a>
         </p>
 
@@ -44,7 +43,7 @@
             <h5><strong>SUMMARY</strong></h5>
             <p class="justified">
                 I'm a senior software developer with <b>over three years</b> of
-                hands-on experience in <b>Salesforce, C/C++, and Python.</b> <br>
+                hands-on experience in <b>Salesforce.</b> <br>
                 I'm not just passionate about software development,
                 but also about <b>connecting with people.</b> <br>
                 Being a <b>communicative person,</b>
@@ -58,9 +57,11 @@
 
         <div class="container">
             <h5><strong>TECHNICAL EXPERTISE</strong></h5>
-            <h6><strong>Salesforce.com 2+ years</strong></h6>
+            <h6><strong>Salesforce.com 3+ years</strong></h6>
             <h6>
                 <span class="badge badge-light">Apex</span>
+                <span class="badge badge-light">fflib</span>
+                <span class="badge badge-light">ATK</span>
                 <span class="badge badge-light">LWC</span>
                 <span class="badge badge-light">Aura</span>
                 <span class="badge badge-light">VisualForce</span>
@@ -79,8 +80,8 @@
                 </span>
             </h6>
             <h6>
+                <li class="badge badge-light">Digital Engagement</li>
                 <span class="badge badge-light">CPQ</span>
-                <span class="badge badge-light">Omni-Channel</span>
                 <span class="badge badge-light">IQVIA</span>
                 <span class="badge badge-light">Data migration</span>
             </h6>
@@ -101,7 +102,6 @@
             <h6>
                 <span class="badge badge-light">Python3
                     <ul class="list-inline" style="margin-bottom: 0;">
-                        <li class="list-inline-item">Django</li>
                         <li class="list-inline-item">asyncio</li>
                     </ul>
                 </span>
@@ -153,9 +153,48 @@
 
         <div class="container">
             <h5><strong>EXPERIENCE</strong></h5>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <h6><a href="https://www.proshred.com">Proshred</a> May 2023 - Until now</h6>
+                    <p class="justified">
+                        Position - Salesforce Technical Lead
+                        <br>
+                        <i>Industry-Leading Certified Shredding Company</i>
+                        <br>
+                    <ul>
+                        <li>Developed custom integration solutions</li>
+                        <li>Configured and maintained Service Cloud</li>
+                        <li>Configured and maintained Sales Cloud</li>
+                    </ul>
+                    </p>
+                </div>
+                <div class="col">
+                    <h6><a href="https://www.business-class.com/">Business Class</a> December 2023 - Until now</h6>
+                    <p class="justified">Location: Moldova, Chisinau
+                        <br>
+                        Position - Salesforce Technical Lead
+                        <br>
+                        <i>Leading Business Class Flights Travel Agency</i>
+                        <br>
+                    <ul>
+                        <li>Managed and navigated the development team</li>
+                        <li>Implemented and maintaned more than 10 custom integrations with internal services</li>
+                        <li>Configured and maintained B2C and B2B Sales Cloud</li>
+                        <li>Configured and maintained Service Cloud and Digital Engangement</li>
+                        <li>Implemented and maintained Lightning Web Components</li>
+                        <li>Implemented and maintained custom LWC reports with complex Back-End logic</li>
+                        <li>Implemented and maintaied custom Email templates (Aura/Visualforce)</li>
+                        <li>Implemented in-app notifications engine</li>
+                        <li>Implemented email notifications engine</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+            <hr>
             <div class="row">
                 <div class="col-lg-12">
-                    <h6><a href="https://www.mekanys.com/">Mekanys</a> July 2021 - Until now</h6>
+                    <h6><a href="https://www.mekanys.com/">Mekanys</a> July 2021 - December 2023</h6>
                     <p class="justified">Location: Moldova, Chisinau
                         <br>
                         Position - Salesforce Technical Lead
@@ -184,7 +223,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <h6> <a>Canadian Division </a>May 2022 - Until Now
+                            <h6> <a href="https://integrate2cloudapps.com">Integrate2Cloud </a>May 2022 - December 2023
                             </h6>
                             <p class="justified">
                                 Position - Salesforce Technical Lead
@@ -209,7 +248,8 @@
                             <h6><strong>Clients worked with:</strong></h6>
                             <div class="row">
                                 <div class="col">
-                                    <a>Canadian Leading Personal Blender Manufacturer</a> 2023 - Until Now
+                                    <a href="https://www.nutribullet.com">Nutribullet - Canadian Leading Personal
+                                        Blender Manufacturer</a> September 2023 - December 2023
                                     <br>
                                     <i>Blenders Manufacturer and Distributor</i>
                                     <br>
@@ -226,7 +266,8 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <a>Canadian College in Ontario</a> 2021 - Until Now
+                                    <a href="https://www.sheridancollege.ca/about">Sheridan College - Canadian College
+                                        in Ontario</a> May 2022 - December 2023
                                     <br>
                                     <i>Canadian College</i>
                                     <br>
@@ -243,8 +284,9 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a>Canadian Investment Group of Companies</a>
-                                    2021 - 2023
+                                    <a href="https://www.skylinegroupofcompanies.ca/about-skyline/">Skyline Group of
+                                        Companies - Canadian Investment Group of Companies</a>
+                                    May 2022 - August 2023
                                     <br>
                                     <i>Investment Management Organizations</i>
                                     <br>
@@ -262,7 +304,8 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <a>AI-driven Web and Content Filtering Technologies Company</a> 2023
+                                    <a href="https://www.netsweeper.com">Netsweeper - AI-driven Web and Content
+                                        Filtering Technologies Company</a> February 2023 - March 2023
                                     <br>
                                     <i>AI-driven content web filtering and threat management solutions</i>
                                     <br>
@@ -272,7 +315,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a>iManage end-to-end Solutions Provider</a> 2023
+                                    <a href="https://www.rbrosolutions.com/">RBRO Solutions - iManage end-to-end
+                                        Solutions Provider</a> February 2023 - March 2023
                                     <br>
                                     <i>A premiere iManage partner </i>
                                     <br>
@@ -285,7 +329,8 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <a>Canadian Real Estate Renovation Company</a> 2021 - 2023
+                                    <a href="https://agmrenovations.com">AGM Renovations - Canadian Real Estate
+                                        Renovation Company</a> January 2022 - January 2023
                                     <br>
                                     <i>Canadian Service Provider</i>
                                     <br>
@@ -301,7 +346,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a>UK Sports for young Company</a> 2022 - 2022
+                                    <a href="https://www.littlekickers.co.uk">Little Kickers - UK Sports for young
+                                        Company</a> January 2022
                                     <br>
                                     <i>Sports company</i>
                                     <br>
@@ -317,7 +363,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <h6> <a>European Division </a>August 2021 - June 2022</h6>
+                            <h6> <a href="https://www.merkle.com/dach/en">Merkle DACH </a>August 2021 - May 2022</h6>
                             <p class="justified">
                                 Position - Salesforce Senior Developer
                                 <br>
@@ -335,7 +381,8 @@
                             <h6><strong>Clients worked with:</strong></h6>
                             <div class="row">
                                 <div class="col-6">
-                                    <a>German Biotechnology Company</a> 2021 - 2022
+                                    <a href="https://www.biontech.com/int/en/home.html">BioNTech - German Biotechnology
+                                        Company</a> September 2021 - May 2022
                                     <br>
                                     <i>Biotechnology company</i>
                                     <br>
@@ -347,7 +394,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-6">
-                                    <a>Swiss Real Estate Management Company</a> 2021 - 2022
+                                    <a href="https://www.livit.ch/en">Livit - Swiss Real Estate Management Company</a>
+                                    August 2021 - May 2022
                                     <br>
                                     <i>Real Estate company</i>
                                     <br>
@@ -442,7 +490,7 @@
             </h6>
             <h6>
                 <span class="badge badge-dark">
-                    Salesforce Certified Integration Architect - Scheduled for October 2023
+                    Salesforce Certified Integration Architect - Scheduled for May 2025
                     <img class="certificate" src="src/Integration.Architect.png">
                 </span>
             </h6>
@@ -517,7 +565,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h6>English</h6>
-                    <p class="justified">Level: B2<br>TOEFL iBT score: 93<br></p>
+                    <p class="justified">Level: C1<br>TOEFL iBT score: 93<br></p>
                 </div>
                 <div class="col-lg-4">
                     <h6>Russian<br></h6>
